# cwrap_samba_socket_wrapper

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  ConfigureChecks.cmake  config.h.cmake  socket_wrapper_noop.pc.cmake
cmake/Modules/: DefineCompilerFlags.cmake
doc/: README  socket_wrapper.1  socket_wrapper.1.adoc  socket_wrapper.1.txt
src/: CMakeLists.txt  socket_wrapper.c  socket_wrapper.h  socket_wrapper_noop.c
tests/: CMakeLists.txt  echo_srv.c  test_echo_tcp_sendmsg_recvmsg_fd.c  test_echo_tcp_socket_options.c  test_fork_thread_deadlock.c  test_public_functions.c  test_tcp_dup2.c  thread_deadlock.c  torture.c
